WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46312
Skia's safeRef() and safeUnref() functions are undefined on NULL pointers.
https://bugs.webkit.org/show_bug.cgi?id=46312
Summary
Skia's safeRef() and safeUnref() functions are undefined on NULL pointers.
Steve VanDeBogart
Reported
2010-09-22 15:01:21 PDT
Skia's safeRef() and safeUnref() functions are undefined on NULL pointers. SkSafeRef() and SkSafeUnref() should be used instead. Patch forthcoming.
Attachments
Use SkSafeRef/Unref instead of safeRef/Unref
(7.63 KB, patch)
2010-09-22 15:06 PDT
,
Steve VanDeBogart
no flags
Details
Formatted Diff
Diff
grep missed saveRef, fixed.
(7.77 KB, patch)
2010-09-22 16:33 PDT
,
Steve VanDeBogart
levin
: review+
Details
Formatted Diff
Diff
Use 0 instead of NULL in comment to appease style bot.
(7.76 KB, patch)
2010-09-23 09:39 PDT
,
Steve VanDeBogart
no flags
Details
Formatted Diff
Diff
Fill in reviewer
(7.76 KB, patch)
2010-09-23 09:41 PDT
,
Steve VanDeBogart
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Steve VanDeBogart
Comment 1
2010-09-22 15:06:57 PDT
Created
attachment 68450
[details]
Use SkSafeRef/Unref instead of safeRef/Unref
David Levin
Comment 2
2010-09-22 15:55:43 PDT
Comment on
attachment 68450
[details]
Use SkSafeRef/Unref instead of safeRef/Unref View in context:
https://bugs.webkit.org/attachment.cgi?id=68450&action=review
> WebCore/platform/graphics/skia/PlatformContextSkia.cpp:165 > // Up the ref count of these. saveRef does nothing if 'this' is NULL.
This comment is incorrect. Please update.
Steve VanDeBogart
Comment 3
2010-09-22 16:33:18 PDT
Created
attachment 68470
[details]
grep missed saveRef, fixed.
WebKit Review Bot
Comment 4
2010-09-22 16:34:34 PDT
Attachment 68470
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/graphics/skia/PlatformContextSkia.cpp:165: Use 0 instead of NULL. [readability/null] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Seidel (no email)
Comment 5
2010-09-23 03:17:48 PDT
Comment on
attachment 68450
[details]
Use SkSafeRef/Unref instead of safeRef/Unref Cleared David Levin's review+ from obsolete
attachment 68450
[details]
so that this bug does not appear in
http://webkit.org/pending-commit
.
David Levin
Comment 6
2010-09-23 07:53:17 PDT
Comment on
attachment 68470
[details]
grep missed saveRef, fixed. View in context:
https://bugs.webkit.org/attachment.cgi?id=68470&action=review
> WebCore/platform/graphics/skia/PlatformContextSkia.cpp:165 > + // Up the ref count of these. SkSafeRef does nothing if its argument is NULL.
Use 0 instead of NULL.
David Levin
Comment 7
2010-09-23 07:55:03 PDT
Why did this get put up for review again just to fix a comment? If you want to use the commit queue, then just attach the patch as if you were going to land it (with the reviewer filled in and nits fixed). Then just mark the patch as cq+ (or get any committer to do so). No need for a new review :)
Steve VanDeBogart
Comment 8
2010-09-23 09:39:49 PDT
Created
attachment 68530
[details]
Use 0 instead of NULL in comment to appease style bot.
Steve VanDeBogart
Comment 9
2010-09-23 09:41:48 PDT
Created
attachment 68531
[details]
Fill in reviewer
Steve VanDeBogart
Comment 10
2010-09-23 09:42:45 PDT
Sorry, I infrequently submit webkit patches.
Steve VanDeBogart
Comment 11
2010-09-23 11:00:33 PDT
Landed by jhawkins as
r68165
.
WebKit Review Bot
Comment 12
2010-09-23 13:16:58 PDT
http://trac.webkit.org/changeset/68165
might have broken GTK Linux 32-bit Debug The following changes are on the blame list:
http://trac.webkit.org/changeset/68163
http://trac.webkit.org/changeset/68164
http://trac.webkit.org/changeset/68165
http://trac.webkit.org/changeset/68166
http://trac.webkit.org/changeset/68167
http://trac.webkit.org/changeset/68168
http://trac.webkit.org/changeset/68169
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug