2010-09-23  Steve VanDeBogart  <vandebo@chromium.org>

Reviewed by David Levin.

        https://bugs.webkit.org/show_bug.cgi?id=46312

        Use Skia's SkSafeRef/SkSafeUnref functions instead of safeRef/safeUnref.

        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::Font::drawGlyphs):
        * platform/graphics/chromium/FontPlatformDataLinux.cpp:
        (WebCore::FontPlatformData::FontPlatformData):
        (WebCore::FontPlatformData::~FontPlatformData):
        * platform/graphics/skia/GradientSkia.cpp:
        (WebCore::Gradient::platformDestroy):
        * platform/graphics/skia/PatternSkia.cpp:
        (WebCore::Pattern::platformDestroy):
        * platform/graphics/skia/PlatformContextSkia.cpp:
        (WebCore::PlatformContextSkia::State::State):
        (WebCore::PlatformContextSkia::State::~State):
        (WebCore::PlatformContextSkia::drawRect):
        (WebCore::PlatformContextSkia::setStrokeShader):
        (WebCore::PlatformContextSkia::setFillShader):
        (WebCore::PlatformContextSkia::setDashPathEffect):
        * platform/graphics/skia/SkiaFontWin.cpp:
        (WebCore::paintSkiaText):


Canonical link: https://commits.webkit.org/58864@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@68165 268f45cc-cd09-0410-ab3c-d52691b4dbfc